<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Milestone</string>
    <string name="action_settings">Settings</string>

	<!-- Titles -->
	<string name="title_activity_moving">MovingActivity</string>
	<string name="title_activity_maps">Map</string>
	<string name="title_activity_multi_pane">Plan Your Route</string>
	<string name="title_activity_milestones">Combine Stops</string>
	<string name="title_activity_splash">Splash</string>

    <!-- Route Fragment -->
    <string name="et_route_from">From</string>
    <string name="et_route_to">To</string>
    <string name="bt_route_get_route">GET ROUTE</string>
    <string name="bt_current_location">My Location</string>
	<string name="route_navigation_next">NEXT</string>

    <!-- Map Fragment -->
    <string name="tv_fragment_map">This is where the map will show...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_window_icon">milestone_category</string>
    <string name="info_window_clicktoadd">Add/Remove</string>

    <!-- Milestones Fragment -->
    <string name="et_milestones_text_from">Stockholm</string>
    <string name="et_milestones_text_to">Lund</string>
    <string name="route_list_item">Route list item</string>
    <string name="card_milestone_text">Milestone Card</string>
    <string name="button_edit_route">EDIT</string>
	<string name="button_start_route">START</string>
	<string name="milestone_navigation_back">BACK</string>
	<string name="milestone_navigation_start">START</string>

	<!-- Control Fragment -->
	<string name="tv_control_info_next_stop_left">2h 34m</string>
	<string name="tv_control_info_next_stop_right">1h 15m</string>
	<string name="tv_control_info_gas_left">Empty</string>
	<string name="tv_control_info_gas_right">Full</string>
	<string name="tv_control_info_time_clock_left">4h 38m</string>
	<string name="tv_control_info_time_clock_right">3h 12m</string>
	<string name="tv_navigation_info_title">Title</string>
	<string name="tv_navigation_info_rating">Rating</string>
	<string name="tv_navigation_info_time">Time</string>
	<string name="tv_navigation_info_distance">Distance</string>
	<string name="suggestion_button_confirm">Add</string>
    <string name="suggestion_button_next">Skip</string>
    <string name="suggestion_button_cancel">Cancel</string>
    <string name="tv_navigation_info_description">Description</string>
    <string name="tv_navigation_info_total_time_left">TimeLeft</string>

</resources>
