<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background_fragment_left"
              android:paddingTop="@dimen/fragment_left_top_padding"
              android:paddingBottom="@dimen/fragment_left_bottom_padding"
              android:paddingLeft="@dimen/fragment_left_left_padding"
              android:paddingRight="@dimen/fragment_left_right_padding"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
	>


    <!-- Lägg till fler layouter för att få en TextView bredvid +-knappen -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <RelativeLayout
            android:id="@+id/rl_wizard_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_current_fragment_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Route Fragment"
                android:textColor="@color/text_fragment_route"
                />
        <ImageButton
                android:id="@+id/ib_next_fragment_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                />


    </RelativeLayout>
        <AutoCompleteTextView
                android:id="@+id/autocomplete_route_from"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_fragment_route"
                android:hint="@string/et_route_from" />

	    <RelativeLayout
			    android:id="@+id/container_use_current_location"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/use_current_location_top"
		        android:layout_marginBottom="@dimen/use_current_location_bottom"
		        android:layout_marginLeft="@dimen/use_current_location_left"
		        android:layout_marginRight="@dimen/use_current_location_right"
			    >

		    <ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:id="@+id/image_my_location"
				    android:src="@drawable/my_location"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="@dimen/image_my_location_margin_right"
				    />

		    <TextView
				    android:id="@+id/tv_use_current_location"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="@dimen/text_my_location_margin_right"
				    android:layout_toRightOf="@+id/image_my_location"
				    android:layout_centerVertical="true"
				    android:text="@string/bt_current_location"
				    android:textColor="@color/text_fragment_route"
		            android:textSize="16dp"
				    />

		    <ToggleButton
				    android:id="@+id/toggle_my_location"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentEnd="true"
				    android:layout_gravity="end"

		            style="@android:style/Widget.Holo.Button.Borderless.Small"
				    />

	    </RelativeLayout>

        <AutoCompleteTextView
                android:id="@+id/autocomplete_route_to"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_fragment_route"
                android:hint="@string/et_route_to"
                />

        <Button
		        android:id="@+id/btSubmitNearestRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_get_route_top_margin"
                android:layout_gravity="center"
                android:text="@string/bt_route_get_route"
                android:textColor="@color/text_fragment_route"
                style="?android:attr/borderlessButtonStyle"
                />

        <ProgressBar
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                />

    </LinearLayout>
</LinearLayout>

